Mon commit - Ajout du site CV + humble

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youssef - Ingénieur DevOps</title>
+    <title>Youssef - Ingénieur DevOps Humble</title>
     <link rel="stylesheet" href="style.css">
     <style>
         .profile-pic {
