--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <img src="profile-pic (1).png" alt="Photo de profil" class="profile-pic">
         <h1>👋 Bonjour, Je suis Youssef</h1>
-        <h2>🚀 Ingénieur DevOps 2025 à PREPAVENIR | 22 ans d'expérience IT | Passionné d'automatisation</h2>
+        <h2>🚀 Ingénieur DevOps | 22 ans d'expérience IT | Passionné d'automatisation</h2>
         <a href="https://www.linkedin.com/in/youssef-el-ouargui-5257b817b/" class="linkedin">LinkedIn</a>
     </header>
     
